--- a/1-operators-if-else-etc/index.html
+++ b/1-operators-if-else-etc/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript 3</title>
+    <title>JavaScript 1</title>
     <style>
       body {
         height: 100vh;
@@ -24,7 +24,10 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript 2</h1>
-    <script src="script.js"></script>
+    <h1>JavaScript 1</h1>
+
+    <script src="learning.js"></script>
+    <script src="asassignments.js"></script>
+
   </body>
 </html>
