--- a/3-objects-loops/index.html
+++ b/3-objects-loops/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript 1</title>
+    <title>JavaScript 3</title>
     <style>
       body {
         height: 100vh;
@@ -24,8 +24,8 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript 1</h1>
-
-    <script src="script.js"></script>
+    <h1>JavaScript 3</h1>
+    <script src="learning.js"></script>
+    <script src="assigments.js"></script>
   </body>
 </html>
